# FastestDet

./: .gitignore  eval.py  test.py  train_coco.py
example/mnn/cplusplus/: CMakeLists.txt  classify-mnn-opencv.cpp  classify-mnn-stb.cpp  classify-mnn-stb2.cpp  detect.cpp  pictureRecognition.cpp
example/mnn/py/: classify.py  detect.py
example/onnx-runtime/: runtime.py
module/: custom_layers.py  detector.py  loss.py  shufflenetv2.py
tests/: dataset.py  detector.py
utils/: cocodataset.py  datasets.py  evaluation.py  tool.py
